Recettage + Feature Tiny Search à la Amazon + Bugfix Search links on home + Bouton more avec flèche + padding top bottom footer on mobile

--- a/wp-content/themes/sage/assets/styles/components/_forms.scss
+++ b/wp-content/themes/sage/assets/styles/components/_forms.scss
@@ -22,7 +22,105 @@
     border-radius: 6px;
 }
 
+.col-search {
+    padding: 0;
+    
+    .select-container, input[type=text] {
+        width: 100%;
+    }
+}
 
+@include media-breakpoint-down(xs) {
+    .row-search {
+        .col-search {
+            &:first-child {
+                padding-left: 15px;
+            }
+            
+            &:last-child {
+                padding-right: 15px;
+            }
+        }
+    }
+}
+
+.form-container {
+    display: flex;
+    align-items: center;
+    
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.select-container {
+    color: white;
+    background-color: $cdma-light-brown;
+    background-image: none;
+    
+    white-space: nowrap;
+    height: 35px;
+    margin: 0;
+    padding-left: 5px;
+    
+    .select-facade {
+        font-family: $title-fonts;
+        font-size: 13px;
+        background-color: transparent;
+        background-image: url(../images/icon-arrow-down-white.gif);
+        background-position: 95% 16px;
+        background-repeat: no-repeat;
+        background-size: 8px;
+        cursor: default;
+        
+        display: inline-block;
+        width: 100%;
+        line-height: 40px;
+        padding-left: 5px;
+        padding-right: 24px;
+    }
+    
+    select {
+        font-size: 12px;
+        
+        display: block;
+        width: auto;
+        height: 37px;
+        line-height: 37px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: 0;
+        outline: 0;
+        margin: 0;
+        padding: 0;
+        cursor: pointer;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        visibility: visible;
+    }
+}
+
+.select-input-container {
+    flex: 1;
+    min-width: 0; 
+    
+    .select-input {
+        white-space: nowrap;
+        overflow: hidden;
+
+        display: block;
+        width: 100%;
+        line-height: 15px;
+        padding: 10px;
+        padding-right: 30px;
+        border-radius: 0;
+    }
+}
+
+
+.select-button {
+    display: none;
+}
 
 .wpcf7-form {
     
